# yt-bot

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  main.py
app/services/: classify.py  orchestrator.py  summarize.py  telegram.py  transcript.py  translate.py  tts.py
app/utils/: logger.py  prompt.py  storage.py  youtube.py
prompts/: summarization.txt
